working on fix for overflow issue w/ some browsers

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -207,9 +207,10 @@
 			// grid-row: 4 / 7;
 			@media only screen and (min-width: $bp-smallest) {
 				grid-template-columns: 50% 1fr;
-				grid-row: 6 / 7;
+				grid-row: 6 / 8;
 				grid-column: 4 / 7;
 				direction: rtl;
+				// overflow: hidden !important;
 			}
 
 			.projects__item-details {
